<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>hybrid_local_planner</name> 
    <version>0.0.1</version>
    <description>
    A simple local planner created using Dijkstra's algorithm and the Hybrid A* algorithm. 

    </description>
    <author>Fahim Shahriar</author> 
    <maintainer email="fshahri1@ualberta.ca">Fahim Shahriar</maintainer> 
    
    <license>BSD</license>
    <!-- <url>http://wiki.ros.org/dwa_local_planner</url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/hlp_plugin.xml" />
    </export>

</package>


